<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_title_myinformation"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:text="@string/my_information"
        android:textColor="@color/color_blue_title"
        android:textSize="@dimen/space_l"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_myinformation_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_myinformation">


        <TextView
            android:id="@+id/textView_myinformation_useridtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staff_name"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/space_l" />

        <TextView
            android:id="@+id/textView_myinformation_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/space_m_plus" />

        <TextView
            android:id="@+id/textView_myinformation_departmenttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/space_l" />

        <TextView
            android:id="@+id/textView_myinformation_department"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/space_m_plus" />

        <TextView
            android:id="@+id/textView_myinformation_emailtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/space_l" />

        <TextView
            android:id="@+id/emailtextView_myinformation_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_black"
            android:textSize="@dimen/space_m_plus" />
    </LinearLayout>

    <Button
        android:id="@+id/button_myinformation_logout"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_red"
        android:drawableLeft="@drawable/ic_round_cancel_24px"
        android:paddingLeft="5dp"
        android:text="@string/log_out"
        android:textColor="@color/color_white"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>