<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CollectionPointTitle"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#00a6ac"
        android:textSize="28dp"
        android:layout_weight="0"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CollectionPoint"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_orange"
            android:textSize="@dimen/space_m" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangeCollectionPoint"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

    </LinearLayout>


    <RelativeLayout android:id="@+id/relativeTop"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_weight="0"
        >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/ic_round_cancel_24px"
            android:paddingLeft="5dp"
            android:background="@drawable/button_red"
            android:layout_toLeftOf="@id/txtHide"
            />
        <TextView android:id="@+id/txtHide" android:layout_width="50dp" android:layout_height="1dp"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/button1"
            android:text="@string/label_submit"
            android:background="@drawable/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_round_check_circle_24px"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"
            android:layout_toRightOf="@id/txtHide"

            />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

</LinearLayout>

