<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id = "@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_black"
        android:textSize="@dimen/space_m"
        android:text = "@string/upcomingCollectionHeader1"
        />
    <TextView
        android:id = "@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/space_m"
        />
    <TextView
        android:id = "@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_black"
        android:textSize="@dimen/space_m"
        android:text = "@string/upcomingCollectionHeader2"
        />
    <TextView
        android:id = "@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/space_m"
        />

    <TextView
        android:id = "@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_black"
        android:textSize="@dimen/space_m"
        android:text = "@string/upcomingCollectionHeader3"
        />
    <TextView
        android:id = "@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/space_m"
        />

</LinearLayout>

