<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/space_8">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="@dimen/space_8"
        android:text="@string/label_report"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/space_m"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_type_your_comment"
        android:inputType="textMultiLine|text"
        android:padding="@dimen/space_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <RelativeLayout
        android:id="@+id/relativeTop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/txtHide"
            android:background="@drawable/button_red"
            android:drawableLeft="@drawable/ic_round_cancel_24px"
            android:gravity="center"
            android:paddingLeft="5dp"
            android:text="@string/cancel"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/txtHide"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txtHide"
            android:background="@drawable/button_green"
            android:drawableLeft="@drawable/ic_round_check_circle_24px"
            android:paddingLeft="5dp"
            android:text="@string/label_submit"
            android:textColor="#ffffff"

            />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>

