<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color_orange"
        android:textSize="@dimen/space_m_plus"
        android:layout_weight="0"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_name"

            android:textColor="@color/color_black"
            android:textSize="@dimen/space_m" />

        <TextView
            android:id="@+id/textViewquantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Quantity"
            android:gravity="right"
            android:textColor="@color/color_black"
            android:textSize="@dimen/space_m" />
    </RelativeLayout>


    <TextView
        android:id="@+id/textView24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1
"
        >

    </ListView>


    <RelativeLayout android:id="@+id/relativeTop"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_weight="0"
        >

        <Button
            android:id="@+id/Button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reject"
            android:textColor="#ffffff"
            android:drawableLeft="@drawable/ic_round_cancel_24px"
            android:paddingLeft="5dp"
            android:background="@drawable/button_red"
            android:layout_toLeftOf="@id/txtHide"
            />
        <TextView android:id="@+id/txtHide" android:layout_width="50dp" android:layout_height="1dp"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/Button2"
            android:text="@string/approve"
            android:background="@drawable/button_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_round_check_circle_24px"
            android:paddingLeft="5dp"
            android:textColor="#ffffff"
            android:layout_toRightOf="@id/txtHide"

            />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView28"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />


</LinearLayout>

