<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--//顺序可能有所更改，需注意-->
    <!--//textview 9 标题：Issue Date-->
    <!--//textview 1 Issue Date-->
    <!--//textview 12 标题：Total Price-->
    <!--//textview 2 Total Price-->
    <!--//textview 13 标题：Status-->
    <!--//textview 3 Status-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/space_s_plus"
            android:textColor="@color/color_black"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/space_s_plus"
            android:textColor="@color/color_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textSize="@dimen/space_s_plus"
            android:textColor="@color/color_black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/space_s_plus"
            android:textColor="@color/color_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="@dimen/space_s_plus"
            android:textColor="@color/color_black"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_gray"
            android:textSize="@dimen/space_s_plus" />
    </LinearLayout>

</LinearLayout>