<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApplyVoucherCUActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_itemcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="@dimen/space_s_plus"
                android:textColor="@color/color_black"
                android:text="@string/item_category" />

            <Spinner
                android:id="@+id/spinner_applyvoucher_additem_itemcategory"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_itemname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="@dimen/space_s_plus"
                android:textColor="@color/color_black"
                android:text="@string/item_name" />

            <Spinner
                android:id="@+id/spinner_applyvoucher_additem_itemname"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:textColor="@color/color_black"
                android:textSize="@dimen/space_s_plus"
                android:text="@string/Quantity" />

            <EditText
                android:id="@+id/applyvoucher_quantity"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="Quantity"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spinner_applyvoucher_additem_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </TableRow>

        <EditText
            android:id="@+id/editText_applyvoucher_additem_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Remark"
        />
    </TableLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_applyvoucher_additem_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/txtHide"
            android:background="@drawable/button_red"
            android:drawableLeft="@drawable/ic_round_cancel_24px"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:text="@string/cancel"
            android:textColor="@color/color_white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHide"
            android:layout_width="50dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button_applyvoucher_additem_apply"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/txtHide"
            android:background="@drawable/button_green"
            android:drawableLeft="@drawable/ic_round_check_circle_24px"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:singleLine="false"
            android:text="@string/confirm"
            android:textColor="@color/color_white"
            android:textStyle="bold" />
    </RelativeLayout>
    </android.support.constraint.ConstraintLayout>